<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pet_list_background"
    tools:context=".PetDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/name_detail_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/pet_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/pet_imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pet_description_textView"
        android:layout_width="355dp"
        android:layout_height="104dp"
        android:layout_marginTop="222dp"
        android:text="@string/pet_description"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/pet_ratingBar"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginTop="342dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tags_detail_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tags_detail_textView"
        android:layout_width="106dp"
        android:layout_height="36dp"
        android:layout_marginTop="347dp"
        android:text="@string/pet_tags"
        app:layout_constraintEnd_toStartOf="@+id/pet_ratingBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pet_imageButton"
        android:layout_width="197dp"
        android:layout_height="166dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/pet_image"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>