<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButtons"
    tools:context=".ExpandedFragment">

    <TextView
        android:id="@+id/expand_tags_detail_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_tags"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_pet_ratingBar" />

    <ImageButton
        android:id="@+id/expand_pet_imageButton"
        android:layout_width="339dp"
        android:layout_height="349dp"
        android:clickable="false"
        android:contentDescription="@string/pet_image"
        android:padding="16dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toTopOf="@+id/expand_pet_description_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_name_detail_TextView" />

    <RatingBar
        android:id="@+id/expand_pet_ratingBar"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:clickable="false"
        android:isIndicator="true"
        android:isScrollContainer="false"
        android:longClickable="false"
        android:max="5"
        android:stepSize=".5"
        app:layout_constraintBottom_toTopOf="@+id/expand_tags_detail_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_pet_description_textView" />

    <TextView
        android:id="@+id/expand_name_detail_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/expand_pet_imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expand_pet_description_textView"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:text="@string/pet_description"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/expand_pet_ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_pet_imageButton" />

</androidx.constraintlayout.widget.ConstraintLayout>